fixed .hidden embeds and explorer file icon spacing

--- a/client/styles/sidebars.css
+++ b/client/styles/sidebars.css
@@ -270,12 +270,14 @@ div:has(> #toc-list) {
 .explorer-file-link.has-icon,
 .toc-link.has-icon {
     gap: 0.5rem;
+    text-align: left;
 }
 
 .item-icon {
+    flex-shrink: 0;
     padding-left: 0.5em;
-    width: 1.5rem;
-    text-align: center;
+    width: 1.25rem;
+    text-align: left;
 }
 
 .item-text {
